# AdventOfCode

./: .gitignore  README.md
2015/: aoc2015.cabal
2015/src/: Day01.hs  Day02.hs  Main.hs
2016/: 01_day.cpp
2017/: 01_day.hs  02_day.hs  03_day.hs  04_day.hs  05_day.hs  06_day.hs  07_day.hs  aoc2017.cabal
2017/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Main.hs
2018/: 01_day.hs  02_day.hs  03_day.hs  04_day.hs  05_day.hs  06_day.hs  07_day.hs  08_day.hs  09_day.hs  10_day.hs  11_day.hs  12_day.hs  13_day.hs  Day14.hs  aoc2018.cabal
2018/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Main.hs
2019/: .gitignore  01_day.cpp  01_day.hs  02_day.cpp  02_day.hs  03_day.cpp  03_day.hs  04_day.cpp  04_day.hs  05_day.cpp  06_day.hs  07_day.cpp  08_day.hs  09_day.cpp  10_day.hs  11_day.cpp  12_day.hs  Makefile
2020/: 01_day.hs  02_day.hs  03_day.hs  04_day.hs  05_day.hs  06_day.hs  07_day.hs  08_day.hs  09_day.hs  10_day.hs  11_day.hs  12_day.hs  13_day.hs  14_day.hs  15_day.hs  16_day.hs  17_day.hs  18_day.hs  19_day.hs  20_day.hs  21_day.hs  22_day.hs  23_day.hs  24_day.hs  25_day.hs
2020/input/: 15_day.txt
2021/: aoc2021.cabal
2021/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Main.hs  Template.hs
2022/: aoc2022.cabal
2022/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Main.hs
