cabal-version:      2.4
name:               aoc2017
version:            0.1.0.0

license:            NONE
author:             Michal Mrena
maintainer:         michal.mrena@gmail.com

executable main
    main-is:          Main.hs
    other-modules:    Day01
                    , Day02
                    , Day03
                    , Day04
                    , Day05
                    , Day06
                    , Day07
    build-depends:    array      >=0.5.4.0
                    , base       >=4.15.0.0
                    , containers >=0.6.4.1
                    , mtl        >=2.2.2
                    , parsec     >=3.1.14.0
                    , vector     >=0.12.3.1
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -O2 -main-is Main