cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0

license:            NONE
author:             Michal Mrena
maintainer:         michal.mrena@gmail.com

executable main
    main-is:          Main.hs
    other-modules:    Day01
                    , Day02
    build-depends:    base        >=4.15.0.0
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -O2 -main-is Main