cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0

license:            NONE
author:             Michal Mrena
maintainer:         michal.mrena@gmail.com

executable main
    main-is:          Main.hs
    other-modules:    Day01
                    , Day02
                    , Day03
                    , Day04
                    , Day05
                    , Day06
                    , Day07
                    , Day08
                    , Day09
                    , Day10
                    , Day11
                    , Day12
    build-depends:    base       >=4.15.0.0
                    , parsec     >=3.1.14.0
                    , containers >=0.6.5.1
                    , split      >=0.2.3.5
                    , parsec     >=3.1.14.0
                    , vector     >=0.13.0.0
                    , mtl        >=2.2.2
                    , matrix     >=0.3.6.1
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -O2
                      -main-is Main